# bft-pmc

./: .gitignore  LICENSE  MODEL_ZOO.md  README.md  eval.py  metrics.py  pyproject.toml  requirements.txt  train.py
analysis/: __init__.py  checkpoints.py
balls_and_urns/: README.md  analysis.py  baselines.py  beta_bernoulli.py  data.py  dataset.py  distribution_dynamics.py  evals.py  plot_dynamics_combined.py  plot_marginals.py  plot_stitched_marginals.py  plot_sweep_combined.py  plot_sweep_prior.py  predictive_monte_carlo.py  sweep_analysis.py  train.py
linear_regression/: README.md  __init__.py  baselines.py  distribution_dynamics.py  evals.py  likelihoods.py  plot_dynamics_combined.py  plot_marginals.py  plot_single_marginal.py  plot_stitched_marginals.py  plot_stitched_sweep_dynamics.py  plot_sweep_combined.py  plot_sweep_prior.py  predictive_monte_carlo.py  priors.py  sweep_analysis.py  train.py
linear_regression/analysis/: __init__.py  config.py  data.py  metrics.py  plotting.py  runner.py
markov/: README.md  __init__.py  analysis_common.py  baselines.py  config.py  data.py  evals.py  model.py  plot_dynamics_combined.py  plot_matrix_marginals.py  plot_sweep_combined.py  plot_sweep_prior.py  plotting.py  predictive_monte_carlo.py  run_pmc.py  samples_saving.py  sweep_analysis.py  task_diversity_threshold.py  task_diversity_threshold.yaml  train.py  train.yaml
paper_data/: .gitignore  FIGURE_PROVENANCE.md  README.md
paper_data/beta_bernoulli/: model.pt  pmc_samples.npz  posterior_grid_summary.csv  summary.json
pfn_transformers/: LICENSE  README.md  docs.md  pyproject.toml
pfn_transformers/cookbooks/: 05_wandb_config_interpretability.py  06_supervised_binary_classification.py  07_continuous_sampling_demo.py
pfn_transformers/pfn_transformerlens/: checkpointing.py  train.py  wandb_logger.py  wandb_utils.py
pfn_transformers/tests/: test_bucketizer.py  test_checkpointing.py  (+5 more)
plotting/: __init__.py  marginal_cell.py  paper_style.py
scripts/: __init__.py  compute_bau_prior_predictive_kl.py  compute_lr_prior_delta_mse.py  compute_markov_prior_predictive_kl.py  generate_bau_eval_dataset.py  plot_intro_identifiability.py  reproduce_paper.sh
sweeps/: __init__.py  run_yaml_sweep.py
tests/: conftest.py  test_bau_analysis.py  test_bau_core.py  test_beta_bernoulli.py  test_cli_analysis_entrypoints.py  test_lr_analysis_core.py  test_lr_analysis_plotting.py  test_lr_analysis_runner.py  test_lr_distribution_dynamics.py  test_lr_metrics.py  test_marginal_plotting.py  test_markov_core.py  test_markov_plotting.py  test_markov_samples.py  test_markov_sweep_analysis.py  test_markov_training.py  test_pfn_edge_utilities.py  test_pfn_model_edges.py  test_pfn_training_edges.py  test_public_data_scripts.py  test_public_figures.py  test_python_entrypoint_guards.py  test_training_entrypoints.py
(+79 files in other folders)
